# Self-Improvement

./: .gitignore
Algorithm/CCCC-GPLT/: CMakeLists.txt  L1-001. Hello World.cpp  L1-002. 打印沙漏.cpp  L1-003. 个位数统计 .cpp  L1-004. 计算摄氏温度 .cpp  L1-005. 考试座位号.cpp
Algorithm/PAT/: 1001.A+BFormat.cpp  CMakeLists.txt
Language/Kotlin/: build.gradle
Language/Kotlin/gradle/wrapper/: gradle-wrapper.properties
Language/Kotlin/src/com/peachou/kotlin/builtintypes/arrays/: JavaArray.java
Language/Kotlin/src/com/peachou/kotlin/builtintypes/basics/: JavaBasicTypes.java
Language/Kotlin/src/com/peachou/kotlin/builtintypes/collections/: JavaCollections.java
Language/Kotlin/src/com/peachou/kotlin/builtintypes/functions/: JavaMethods.java
Language/Kotlin/src/main/java/com/peachou/kotlin/: HelloWorld.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedfunctions/eg/: CountCharacters.kt  Htmls.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedfunctions/extensions/: KotlinExtensions.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedfunctions/highorderfuncs/: KotlinHigherOrderFunctions.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedfunctions/inlines/: KotlinInlines.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedfunctions/sams/: EventManager.java  Events.kt  JavaSams.java  KotlinSams.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedfunctions/sequences/: JavaStreams.java  KotlinSequences.kt
Language/Kotlin/src/main/java/com/peachou/kotlin/advancedtypes/constructors/: JavaConstructors.java  KotlinConstructors.kt
(+82 files in other folders)
