cmake_minimum_required(VERSION 3.16)
project(CCCC_GPLT)

set(CMAKE_CXX_STANDARD 14)

add_executable(001 "L1-001. Hello World.cpp")
add_executable(002 "L1-002. 打印沙漏.cpp")
add_executable(003 "L1-003. 个位数统计.cpp")
add_executable(004 "L1-004. 计算摄氏温度.cpp")
add_executable(005 "L1-005. 考试座位号.cpp")
add_executable(006 "L1-006. 连续因子")