cmake_minimum_required(VERSION 3.16)
project(CCCC_GPLT)

set(CMAKE_CXX_STANDARD 14)

add_executable(001 "L1-001. Hello World.cpp")
add_executable(002 "L1-002. 打印沙漏.cpp")
add_executable(003 "L1-003. 个位数统计.cpp")
add_executable(004 "L1-004. 计算摄氏温度.cpp")
add_executable(005 "L1-005. 考试座位号.cpp")
add_executable(006 "L1-006. 连续因子.cpp")
add_executable(007 "L1-007. 念数字.cpp")
add_executable(008 "L1-008. 求整数段和.cpp")
add_executable(009 "L1-009.SumOfNumbers.cpp")
add_executable(010 "L1-010. ComparisonOfSize.cpp")
add_executable(011 "L1-011. A-B.cpp")
add_executable(012 "L1-012. 计算指数.cpp")
add_executable(013 "L1-013. 计算阶乘和.cpp")
add_executable(014 "L1-014. 简单题.cpp")
add_executable(015 "L1-015. 跟奥巴马一起画方块.cpp")
add_executable(016 "L1-016. 查验身份证.cpp")
add_executable(017 "L1-017. 到底有多二.cpp")
add_executable(018 "L1-018. 大笨钟.cpp")
add_executable(019 "L1-019. 谁先倒.cpp")
add_executable(020 "L1-020. 帅到没朋友.cpp")